@@ -69,7 +69,7 @@ public abstract class CustomFormFactory implements IFormFactory {
 		for (int i = 0; i < cacheForm.size(); i++) {
 			if (formName.equals(cacheForm.get(i).getName())) {
 				try {
-					CustomFormController customForm = cacheForm.get(i).newInstance();
+					CustomFormController customForm = cacheForm.get(i).getConstructor().newInstance();
 					log.info(String.format("FormFactory [Class Name: %s]", formName));
 					ADForm adForm = customForm.getForm();
 					adForm.setICustomForm(customForm);
